--- a/pages/index.css
+++ b/pages/index.css
@@ -198,10 +198,8 @@
   font-size: 44px;
   line-height: 52px;
   color: #000000;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 80px;
-  max-width: 385px;
+  margin: 0 0 80px;
+  text-align: center;
 }
 
 .form {
