--- a/pages/index.css
+++ b/pages/index.css
@@ -192,14 +192,11 @@
 }
 
 .reservation__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
+  margin: 0px auto 80px;
+  padding-top: 100px;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  color: #000000;
-  margin: 0 0 80px;
-  text-align: center;
 }
 
 .form {
