--- a/pages/index.css
+++ b/pages/index.css
@@ -1,281 +1,8 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-.header {
-  background-color: #ffffff;
-  background-image: url("/images/background_header.svg");
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  display: flex;
-  flex-direction: column;
-}
-
-.nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  position: relative;
-  height: 39px;
-  width: 105px;
-  top: 30px;
-  left: 30px;
-}
-
-.nav__links {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  padding: 30px 80px 0px 0px;
-  margin: 0%;
-
-  font-weight: 500;
-}
-
-.nav__link {
-  padding-right: 20px;
-  text-decoration: none;
-  font-weight: bold;
-  color: black;
-}
-
-.header__title {
-  max-width: 709px;
-  padding: 183px 0px 0px 80px;
-  margin-top: 19.5px;
-
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: -1px;
-}
-
-.header__span-accent {
-  font-family: "noto serif", Times, serif;
-  font-style: italic;
-  margin: 0%;
-
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__description {
-  margin: 28px 0px 0px 80px;
-  max-width: 683px;
-  font-family: "noto serif", Times, serif;
-
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  height: 568px;
-  width: 646px;
-  position: absolute;
-  right: 5px;
-  top: 124px;
-}
-
-.header__footer {
-  margin-top: auto;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: end;
-
-  padding: 0px 80px 40px;
-}
-
-.header__paragraph {
-  font-weight: 500;
-  color: #838383;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url("/images/background_recipes.svg");
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-}
-
-.recipes {
-  display: flex;
-  flex-direction: column;
-}
-
-.recipes__title {
-  max-width: 580px;
-  padding: 100px 0px 0px 80px;
-  margin: 0px;
-
-  color: #ffffff;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  padding: 24px 0px 0px 80px;
-  margin: 0px;
-
-  color: #ffffff;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  display: flex;
-  flex-direction: row;
-  align-self: center;
-  padding-top: 80px;
-}
-
-.recipes__video-item {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-}
-
-.recipes__video-caption {
-  margin: 0px;
-  list-style-type: none;
-  display: flex;
-  justify-content: space-between;
-  padding: 24px 0px 0px;
-
-  color: #ffffff;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url("../images/background_reservation.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 100px 0;
-  display: flex;
-  justify-content: center;
-}
-
-.reservation__form {
-  max-width: 385px;
-  margin: 0 auto;
-}
-
-.reservation__title {
-  margin: 0px auto 80px;
-  padding-top: 100px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.form__label {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-  display: block;
-}
-
-.form__input {
-  height: 60px;
-  padding-left: 15px;
-  border: 1px solid #838383;
-  border-radius: 4px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.form__input::placeholder {
-  color: #838383;
-}
-
-.form__button {
-  height: 60px;
-  background-color: #2f80ed;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: opacity 0.3s ease;
-  max-width: 385px;
-  margin: 0 auto;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-}
-
-.form__checkbox-container {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  margin-top: 32px;
-}
-
-.form__checkbox-container {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  margin-top: 32px;
-}
-
-.form__checkbox {
-  width: 20px;
-  height: 20px;
-  border-radius: 2px;
-}
-.form__checkbox-label {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/footer.css");
