--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -5,19 +5,23 @@
   background-position: center;
   background-size: cover;
   padding: 100px 0;
+
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reservation__title {
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+
+  text-align: center;
+  margin: 0 auto 80px;
 }
 
 .reservation__form {
   max-width: 385px;
+  width: 100%;
   margin: 0 auto;
-}
-
-.reservation__title {
-  margin: 0px auto 80px;
-  padding-top: 100px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
 }
